updates to dataset

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -19938,7 +19938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 171,
    "id": "58a3ac47",
    "metadata": {},
    "outputs": [
@@ -24660,60 +24660,21 @@
        "[2558 rows x 376 columns]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleaned_data.to_csv('./data/features_dummified_377col.csv', index=False)\n",
+    "cleaned_data.to_csv('./data/features_dummified_376col.csv', index=False)\n",
+    "Target.to_csv('./data/target_376col.csv', index=False)\n",
     "cleaned_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "bac31e18",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       126000\n",
-       "1       139500\n",
-       "3       124900\n",
-       "4       114000\n",
-       "5       227000\n",
-       "         ...  \n",
-       "2619    121000\n",
-       "2620    139600\n",
-       "2621    145000\n",
-       "2622    217500\n",
-       "2623    215000\n",
-       "Name: SalePrice, Length: 2558, dtype: int64"
-      ]
-     },
-     "execution_count": 170,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Target.to_csv('./data/target_377co')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "75cf9fec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37f67913",
+   "id": "66bcd6e0",
    "metadata": {},
    "outputs": [],
    "source": []
