Added engineered features

--- a/RF_preprocessing.ipynb
+++ b/RF_preprocessing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a706b784",
+   "id": "d37c708c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad6d2a3a",
+   "id": "b79cc4fa",
    "metadata": {},
    "source": [
     "# Filling values\n",
@@ -31,14 +31,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9e3126cf",
+   "id": "c7be8c7b",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bp/hmn6zjzd469d_xq7r86lkr200000gn/T/ipykernel_85324/616411187.py:4: DtypeWarning: Columns (36,40,81,87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/bp/hmn6zjzd469d_xq7r86lkr200000gn/T/ipykernel_85942/616411187.py:4: DtypeWarning: Columns (36,40,81,87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  raw_realty = pd.read_csv('./data/Ames_Real_Estate_Data.csv', index_col=0)\n"
      ]
     },
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dcc019cf",
+   "id": "ad55cd06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d496c0cc",
+   "id": "634852da",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5701eb66",
+   "id": "a77d6ad5",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "465f1b6e",
+   "id": "166958ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7b0417f7",
+   "id": "9c4cef6f",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "86b34055",
+   "id": "6d020499",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9fb90d30",
+   "id": "ecf2d5df",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d0d1bb06",
+   "id": "98a8073e",
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0556af5",
+   "id": "94c36468",
    "metadata": {},
    "source": [
     "# Encoding\n",
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "75525fe7",
+   "id": "63483f6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "39fa70cd",
+   "id": "d9a2607c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "64ba2753",
+   "id": "ab642c5f",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3ca2574d",
+   "id": "f01ea370",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5bf1b567",
+   "id": "ac37542d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,147 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "52e953ca",
+   "id": "e8d78b28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['LotShape', 'LandSlope', 'OverallQual', 'OverallCond', 'ExterQual',\n",
+       "       'ExterCond', 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'HeatingQC',\n",
+       "       ...\n",
+       "       'SaleCondition_AdjLand', 'SaleCondition_Alloca', 'SaleCondition_Family',\n",
+       "       'SaleCondition_Partial', 'crime_rate', 'school_quality', 'HouseAge',\n",
+       "       'LastRemod', 'nb_appreciation', 'nb_income'],\n",
+       "      dtype='object', length=212)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "otherAmes = pd.read_csv('data/Ames_215features.csv')\n",
+    "\n",
+    "otherAmes.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5b241c04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2580 entries, 0 to 2579\n",
+      "Data columns (total 85 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   GrLivArea        2580 non-null   int64  \n",
+      " 1   MSSubClass       2580 non-null   int64  \n",
+      " 2   MSZoning         2580 non-null   int64  \n",
+      " 3   LotFrontage      2580 non-null   float64\n",
+      " 4   LotArea          2580 non-null   int64  \n",
+      " 5   Street           2580 non-null   int64  \n",
+      " 6   Alley            2580 non-null   int64  \n",
+      " 7   LotShape         2580 non-null   int64  \n",
+      " 8   LandContour      2580 non-null   int64  \n",
+      " 9   Utilities        2580 non-null   int64  \n",
+      " 10  LotConfig        2580 non-null   int64  \n",
+      " 11  LandSlope        2580 non-null   int64  \n",
+      " 12  Neighborhood     2580 non-null   int64  \n",
+      " 13  Condition1       2580 non-null   int64  \n",
+      " 14  Condition2       2580 non-null   int64  \n",
+      " 15  BldgType         2580 non-null   int64  \n",
+      " 16  HouseStyle       2580 non-null   int64  \n",
+      " 17  OverallQual      2580 non-null   int64  \n",
+      " 18  OverallCond      2580 non-null   int64  \n",
+      " 19  YearBuilt        2580 non-null   int64  \n",
+      " 20  YearRemodAdd     2580 non-null   int64  \n",
+      " 21  RoofStyle        2580 non-null   int64  \n",
+      " 22  RoofMatl         2580 non-null   int64  \n",
+      " 23  Exterior1st      2580 non-null   int64  \n",
+      " 24  Exterior2nd      2580 non-null   int64  \n",
+      " 25  MasVnrType       2580 non-null   int64  \n",
+      " 26  MasVnrArea       2580 non-null   float64\n",
+      " 27  ExterQual        2580 non-null   int64  \n",
+      " 28  ExterCond        2580 non-null   int64  \n",
+      " 29  Foundation       2580 non-null   int64  \n",
+      " 30  BsmtQual         2580 non-null   int64  \n",
+      " 31  BsmtCond         2580 non-null   int64  \n",
+      " 32  BsmtExposure     2580 non-null   int64  \n",
+      " 33  BsmtFinType1     2580 non-null   int64  \n",
+      " 34  BsmtFinSF1       2580 non-null   float64\n",
+      " 35  BsmtFinType2     2580 non-null   int64  \n",
+      " 36  BsmtFinSF2       2580 non-null   float64\n",
+      " 37  BsmtUnfSF        2580 non-null   float64\n",
+      " 38  TotalBsmtSF      2580 non-null   float64\n",
+      " 39  Heating          2580 non-null   int64  \n",
+      " 40  HeatingQC        2580 non-null   int64  \n",
+      " 41  CentralAir       2580 non-null   int64  \n",
+      " 42  Electrical       2580 non-null   int64  \n",
+      " 43  1stFlrSF         2580 non-null   int64  \n",
+      " 44  2ndFlrSF         2580 non-null   int64  \n",
+      " 45  LowQualFinSF     2580 non-null   int64  \n",
+      " 46  BsmtFullBath     2580 non-null   float64\n",
+      " 47  BsmtHalfBath     2580 non-null   float64\n",
+      " 48  FullBath         2580 non-null   int64  \n",
+      " 49  HalfBath         2580 non-null   int64  \n",
+      " 50  BedroomAbvGr     2580 non-null   int64  \n",
+      " 51  KitchenAbvGr     2580 non-null   int64  \n",
+      " 52  KitchenQual      2580 non-null   int64  \n",
+      " 53  TotRmsAbvGrd     2580 non-null   int64  \n",
+      " 54  Functional       2580 non-null   int64  \n",
+      " 55  Fireplaces       2580 non-null   int64  \n",
+      " 56  FireplaceQu      2580 non-null   int64  \n",
+      " 57  GarageType       2580 non-null   int64  \n",
+      " 58  GarageYrBlt      2580 non-null   float64\n",
+      " 59  GarageFinish     2580 non-null   int64  \n",
+      " 60  GarageCars       2580 non-null   float64\n",
+      " 61  GarageArea       2580 non-null   float64\n",
+      " 62  GarageQual       2580 non-null   int64  \n",
+      " 63  GarageCond       2580 non-null   int64  \n",
+      " 64  PavedDrive       2580 non-null   int64  \n",
+      " 65  WoodDeckSF       2580 non-null   int64  \n",
+      " 66  OpenPorchSF      2580 non-null   int64  \n",
+      " 67  EnclosedPorch    2580 non-null   int64  \n",
+      " 68  3SsnPorch        2580 non-null   int64  \n",
+      " 69  ScreenPorch      2580 non-null   int64  \n",
+      " 70  PoolArea         2580 non-null   int64  \n",
+      " 71  PoolQC           2580 non-null   int64  \n",
+      " 72  Fence            2580 non-null   int64  \n",
+      " 73  MiscFeature      2580 non-null   int64  \n",
+      " 74  MiscVal          2580 non-null   int64  \n",
+      " 75  MoSold           2580 non-null   int64  \n",
+      " 76  YrSold           2580 non-null   int64  \n",
+      " 77  SaleType         2580 non-null   int64  \n",
+      " 78  SaleCondition    2580 non-null   int64  \n",
+      " 79  crime_rate       2580 non-null   int64  \n",
+      " 80  school_quality   2580 non-null   int64  \n",
+      " 81  HouseAge         2580 non-null   int64  \n",
+      " 82  LastRemod        2580 non-null   int64  \n",
+      " 83  nb_appreciation  2580 non-null   int64  \n",
+      " 84  nb_income        2580 non-null   int64  \n",
+      "dtypes: float64(11), int64(74)\n",
+      "memory usage: 1.7 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.concat([df, otherAmes[['crime_rate', 'school_quality', 'HouseAge',\n",
+    "       'LastRemod', 'nb_appreciation', 'nb_income']]], axis=1)\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c13504e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,6 +1078,14 @@
     "\n",
     "## We are now done. This will be used in a RandomForest notebook"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36d74a0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
