--- a/RF_without_dummies.ipynb
+++ b/RF_without_dummies.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2617e200",
+   "id": "36aab13d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dfbaff11",
+   "id": "c15f91a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "78f1eb5d",
+   "id": "df055367",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a78eb4ba",
+   "id": "477157a8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a24d8903",
+   "id": "86e23bed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f2ce74b4",
+   "id": "95a1c96f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f2b82e96",
+   "id": "2308d2d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "24041aba",
+   "id": "fa7de0ee",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5df3f7b2",
+   "id": "6fab6f14",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "92ed3a13",
+   "id": "54494d07",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b1db638f",
+   "id": "d405fa77",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e16bf672",
+   "id": "813d1065",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "18c41482",
+   "id": "accb13d3",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "54a62138",
+   "id": "8119393f",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "22fc66c9",
+   "id": "7fb179e0",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "731f3646",
+   "id": "4e3496ec",
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "452f4901",
+   "id": "b1adb6c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e9bc1a20",
+   "id": "98e34947",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "6476e645",
+   "id": "1906e541",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "5a4e1ae7",
+   "id": "fb23c18f",
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "404d3780",
+   "id": "14c9ad1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1833,7 +1833,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "405e711d",
+   "id": "3b73c94c",
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1873,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "b4b465dd",
+   "id": "32756c46",
    "metadata": {},
    "outputs": [
     {
@@ -1894,7 +1894,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "d9d8944e",
+   "id": "0898255f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1906,7 +1906,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "9937aa96",
+   "id": "10b2ef79",
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1934,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "710ee226",
+   "id": "f0f0338b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1944,7 +1944,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "cffadbdb",
+   "id": "df04fd8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1959,7 +1959,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "08e78e18",
+   "id": "d7f1e9a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1970,7 +1970,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "58be1853",
+   "id": "2d926f49",
    "metadata": {},
    "outputs": [
     {
@@ -2024,8 +2024,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 122,
+   "id": "0b8a2170",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>R-sq</th>\n",
+       "      <th>Num_of_feat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.904817</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.906546</td>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.906124</td>\n",
+       "      <td>83.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.906837</td>\n",
+       "      <td>82.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.90685</td>\n",
+       "      <td>81.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>0.88202</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>0.868829</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>0.848431</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>0.790784</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>0.692854</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>85 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        R-sq Num_of_feat\n",
+       "0   0.904817        85.0\n",
+       "1   0.906546        84.0\n",
+       "2   0.906124        83.0\n",
+       "3   0.906837        82.0\n",
+       "4    0.90685        81.0\n",
+       "..       ...         ...\n",
+       "80   0.88202         5.0\n",
+       "81  0.868829         4.0\n",
+       "82  0.848431         3.0\n",
+       "83  0.790784         2.0\n",
+       "84  0.692854         1.0\n",
+       "\n",
+       "[85 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 114,
-   "id": "3d17cd31",
+   "id": "3af06079",
    "metadata": {},
    "outputs": [
     {
@@ -2046,7 +2164,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "506bb48a",
+   "id": "3d30f027",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,7 +2187,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "35c9d8f9",
+   "id": "df4fab7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2082,7 +2200,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "0fde0b26",
+   "id": "9e2c1610",
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2228,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "6d5fc8e0",
+   "id": "9ee534c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2120,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "b1f487f7",
+   "id": "9110e348",
    "metadata": {},
    "outputs": [
     {
@@ -2141,7 +2259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dc5b779",
+   "id": "1e581082",
    "metadata": {},
    "outputs": [],
    "source": []
